         --joystick-keyboard-{output,up,down,left,right,fire} options 
         (fixes bug #3495086) (Fred).
20120310 fuse.xml.in: remove mime types for compressed hdf/mdr/rom files as Fuse
         doesn't support them (more from patch #3413549) (Sergio).
20120327 menu.h,menu_data.pl,ui/gtk/{Makefile.am,binary.c,browse.c,
         gtkinternals.h,gtkjoystick.c,gtkui.c,memory.c,pokefinder.c,pokemem.c},
         utils.[ch]: remove deprecated GTK+ menu functions (patch #3510225)
         (Sergio).
20120506 peripherals/nic/w5100_internals.h: fix build break when building
         without glib (fixes bug #3513990) (Sergio).
20120506 ui/widget/pokemem.c: fix crash in widget Poke Memory dialog (fixes bug
         #3514720) (Sergio).
20120506 peripherals/nic/enc28j60.c: fix LOBYTE and HIBYTE redeclarations on
         Win32 (part of bug #3514721) (Sergio).
20120506 compat/unix/socket.c: fix warning (part of bug #3514721) (Sergio).
20120506 peripherals,peripherals/flash,peripherals/nic: add *.a to the ignore
         property (part of bug #3514721) (Sergio).
20120506 ui/{gtk/options-header.pl,widget/options-header.pl,
         win32/options-header.pl}: fix "Use of uninitialized value within @ARGV"
         warnings (rest of bug #3514721) (Sergio).
20120507 debugger/{debugger.c,debugger_internals.h,variable.c},fuse.c,
         keyboard.[ch],module.[ch],periph.[ch],
         peripherals/disk/{beta.c,disciple.c,opus.c,plusd.c},
         peripherals/speccyboot.[ch],settings.pl,tape.[ch],ui/sdl/sdldisplay.c,
         ui/widget/widget.c: fix various memory leaks (rest of bug #3515269)
         (Sergio).
20120507 machine.c,ui/widget/widget.c,ui/xlib/{Makefile.am,xdisplay.c,
         xstatusbar.pl}: add a statusbar for the xlib UI (patch #3496134)
         (Gergely Szasz).
20120507 input.h,keysyms.dat,keysyms.pl,ui/sdl/sdlkeyboard.c,
         ui/widget/fuse.font.sbf,ui/xlib/xkeyboard.c: extend supported symbol
         characters on SDL and xlib UIs (bug #3517588) (Sergio).